[streams] downgrade api to java 1.8